--- a/Department.html
+++ b/Department.html
@@ -11,6 +11,13 @@
       h1{
         font-size: 60px;
         text-align: center;
+        border-bottom: 1px solid gray;
+        margin : 0;
+      }
+      ol{
+        border-right:1px solid gray;
+        width : 80px;
+        margin-top:0px;
       }
       .saw{
         color :gray;
