--- a/Department.html
+++ b/Department.html
@@ -3,38 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>본전공</title>
-    <style>
-      a{
-        color : black;
-        text-decoration: none;
-      }
-      h1{
-        font-size: 60px;
-        text-align: center;
-        border-bottom: 1px solid gray;
-        margin : 0;
-      }
-      ol{
-        border-right:1px solid gray;
-        width : 80px;
-        margin-top:0px;
-      }
-      .saw{
-        color :gray;
-      }
-      #active{
-        color:red;
-      }
-    </style>
+  <link rel="stylesheet" href="style.css">
   </head>
+  <style>
+    ol{
+      width:305px;
+    }
+  </style>
   <body>
- <h1><a href="index.html" title ="홈으로">잔여 과목 확인<font></a></h1>
+ <h1><a href="index.html" title ="홈으로">잔여 과목 확인</a></h1>
  <ol>
-   <li><a href = "Department.html" title = "본전공" class = "saw" id ="active">본전공</font></a></li>
-   <li><a href = "interdisciplinary.html" title = "복수전공" class = "saw">복수 전공</font><a></li>
-   <li><a href = "prerequisite.html" title = "교양" class = "saw">교양</font></a></li>
-   <li><a href = "schedule.html" title = "학사일정" class = "saw">학사일정</font></a></li>
-   <li><a href = "shortcuts.html" title = "바로가기" class = "saw" >바로가기</font></a></li>
+   <li class ="gap saw" id="active"><a href = "Department.html" title = "본전공" class = "saw" id ="active" >본전공</a></li>
+   <h2>2학기</h2>
+   <ul>
+     <li><a href="6067041.html">6967041 바이오시스템공학 세미나Ⅰ</a></li>
+   </ul>
+   <h2>1학기</h2>
+   <ul>
+     <li><a href="6967025.html">6967025 트랙터공학 및 실습</a></li>
+     <li><a href="6967042.html">6967042 바이오시스템공학 세미나Ⅱ</a></li>
+   </ul>
+   <li class = "saw"><a href = "interdisciplinary.html" title = "복수전공" class = "saw">복수 전공</font><a></li>
+   <li class = "saw"><a href = "prerequisite.html" title = "교양" class = "saw">교양</font></a></li>
+   <li class = "saw"><a href = "schedule.html" title = "학사일정" class = "saw">학사일정</font></a></li>
+   <li class = "saw"><a href = "shortcuts.html" title = "바로가기" class = "saw" >바로가기</font></a></li>
  </ol>
   </body>
 </html>
