--- a/schedule.html
+++ b/schedule.html
@@ -3,33 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>학사 일정</title>
-    <style>
-      a{
-        color : black;
-        text-decoration: none;
-      }
-      .saw{
-        color:gray;
-      }
-      #active{
-        color:red;
-      }
-
-      h1{
-        font-size: 60px;
-        text-align: center;
-        border-bottom: 1px solid gray;
-        margin : 0;
-      }
-      ol{
-        border-right:1px solid gray;
-        width : 80px;
-        margin-top:0px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
- <h1><a href="index.html" title ="홈으로" class = "saw">잔여 과목 확인<font></a></h1>
+ <h1><a href="index.html" title ="홈으로" >잔여 과목 확인<font></a></h1>
  <ol>
    <li><a href = "Department.html" title = "본전공" class = "saw">본전공</font></a></li>
    <li><a href = "interdisciplinary.html" title = "복수전공" class = "saw">복수 전공</font><a></li>
