--- a/index.html
+++ b/index.html
@@ -3,35 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>잔여 과목 확인</title>
-    <style>
-    body{
-      margin : 0;
-    }
-      a{
-        color : black;
-        text-decoration: none;
-      }
-      .saw{
-        color:gray;
-      }
-      #active{
-        color:red;
-      }
-      h1{
-        font-size: 60px;
-        text-align: center;
-        border-bottom: 1px solid gray;
-        height :90px;
-        margin : 0px;
-        padding : 20px;
-      }
-      ol{
-        border-right :1px solid gray;
-        width:100px;
-        margin-top :0px;
-
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html" title ="홈으로">잔여 과목 확인<font></a></h1>
