--- a/shortcuts.html
+++ b/shortcuts.html
@@ -3,29 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>바로가기</title>
-    <style>
-      a{
-        color : black;
-        text-decoration: none;
-      }
-      .saw{
-        color:gray;
-      }
-      #active{
-        color:red;
-      }
-      h1{
-        font-size: 60px;
-        text-align: center;
-        border-bottom: 1px solid gray;
-        margin : 0;
-      }
-      ol{
-        border-right:1px solid gray;
-        width : 80px;
-        margin-top:0px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
  <h1><a href="index.html" title ="홈으로">잔여 과목 확인<font></a></h1>
